--- a/Designcss.css
+++ b/Designcss.css
@@ -120,6 +120,7 @@ p {
     text-align: center;
     font-size: 15px;
 font-family: "Comic Sans MS", "Comic Neue", cursive;
+background: pink;
 }
 
 .p2 {
